--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <h2>Welcome to My Webpage</h2>
               <p>I am a software developer with expertise in several programming languages. 
                 As a problem-solver by nature, I enjoy finding creative solutions to complex challenges.
-                With a strong focus on creating efficient, I am dedicated to delivering high-quality solutions that meet the needs of my clients. 
+                With a strong focus on creating efficiency, I am dedicated to delivering high-quality solutions that meet the needs of my clients. 
                 This webpage provides information about me and my professional background.
                 Please take a moment to explore the content and feel free to reach out.
                 Thank you for visiting!
